--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ html{
   color: white;
 }
 
-.active {
-  background-color: #04AA6D;
+.sidebar .active {
+  background-color: rgb(0, 128, 11);
   color: white;
 }
 
