--- a/style.css
+++ b/style.css
@@ -58,5 +58,9 @@ html{
 }
 
 .invalidInput{
-  border: solid 2px red;
+  border: solid 3px red;
+}
+
+.successfulInput{
+  border: solid 3px green;
 }
